2018-03-23    <cerebrum@gagarin.uit.no>

	* delete_account.py (delete.delete_account): because some ppl
        being employee at uit and sito at the same time, we have to save
        skype contact info on the account objectm and not on the person
        object as before. This means we have to add the
        entity_contact_info table to the list of tables to delete from,
        when deleting an account


2018-02-16    <cerebrum@gagarin.uit.no>

	* rename_account.py (Changer.update_email): removed logger as in parameter to the script, also fixed how to calculate email addresses as the old version would fail if script wasnt able to get ad_email

2018-01-31    <cerebrum@cleomedes.uit.no>

	* rename_account.py (Changer.update_email): The function parsing existing email address wasnt working propperly.
	rewrote it with try/except

2018-01-23    <cerebrum@cleomedes.uit.no>

	* rename_account.py (main): Added new flag. This flag decides if an email will be sent to the user (or  not)

2017-12-22  Karen   <cerebrum@cleomedes.uit.no>

    * add_cim_spread.py: Added to repo. Script for adding cim_spread for a list of persons.

2017-12-18    <cerebrum@cleomedes.uit.no>

	* rename_account.py (main): Removed 2 email recipients when changing username. star-gru@orakel.uit.no and nybruker2@asp.uit.no are no longer in use

2017-10-03    <cerebrum@cleomedes.uit.no>

	* rename_account.py (main): removed sendmail code. cleomedes is not so send out email until after leetag is removed

2017-09-21  Karen   <cerebrum@cleomedes.uit.no>

    * delete_cim_spread.py: Added to repo. Script for deleting cim_spread for a list of persons.

2017-08-29    <cerebrum@cleomedes.uit.no>

	* delete_account.py (delete.delete_account): Need to delete account_id from mailq table as well

2017-08-18    <cerebrum@cleomedes.uit.no-cleomedes>

	* delete_account.py: Updated script to be more robust

2017-06-28    <cerebrum@cleomedes.uit.no-cleomedes>
